# zalo-tauri

./: .gitignore  LICENSE  Makefile  README.md
packaging/: zalo-tauri-autostart.desktop.in  zalo-tauri.desktop.in
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  main.rs  tray.rs  window.rs
src-tauri/src/linux/: mod.rs  notifications.rs  restore_notification_permission.js  titlebar.css  titlebar.rs
