[package]
name = "zalo-tauri"
version = "0.1.3"
description = "Minimal Zalo Web wrapper for Linux"
authors = ["pmkhang"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
gtk = "0.18"
notify-rust = "4"
webkit2gtk = "2.0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
